style: fix toolbar z-index, cleanup

--- a/theme/globals/mission.less
+++ b/theme/globals/mission.less
@@ -1,10 +1,6 @@
 /* Mission subsite */
 
 body.subsite-mkh {
-  .top.bar .ui.container {
-    z-index: 3;
-  }
-
   &.subsite-root {
     #page-document {
       > div.styled-group:nth-child(2) {
@@ -15,7 +11,6 @@ body.subsite-mkh {
 
   .subfooter .footer-description {
     margin-top: 3em;
-    margin-bottom: 1em;
 
     p {
       font-size: 1.125rem;
